src/test/ui/mismatched_types/assignment-operator-unimplemented.stderr
error[E0368]: binary assignment operation `+=` cannot be applied to type `Foo`
  --> $DIR/assignment-operator-unimplemented.rs:6:3
   |
LL |   a += *b;
   |   -^^^^^^
   |   |
   |   cannot use `+=` on type `Foo`
   |
note: an implementation of `AddAssign<_>` might be missing for `Foo`
  --> $DIR/assignment-operator-unimplemented.rs:1:1
   |
LL | struct Foo;
   | ^^^^^^^^^^^ must implement `AddAssign<_>`
note: the following trait must be implemented
  --> $SRC_DIR/core/src/ops/arith.rs:LL:COL
   |
LL | / pub trait AddAssign<Rhs = Self> {
LL | |     /// Performs the `+=` operation.
LL | |     ///
LL | |     /// # Example
...  |
LL | |     fn add_assign(&mut self, rhs: Rhs);
LL | | }
   | |_^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0368`.
